--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <section class="hero" title="four people collaborating around table at an office meeting"></section>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
