--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
     <section class="hero" title="four people collaborating around table at an office meeting"></section>
     <main class="content">
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with colorful SEO doodle, coffee mug, and assorted office supplies on a wooden table"class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with colorful SEO doodle coffee mug assorted office supplies on a wooden table"class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -48,29 +48,29 @@
             </p>
         </article>
     </main>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <section class="benefits">
+        <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="funnel icon" class="icons"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lit up lightbulb icon" class="icons"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="gears with money signs icon" class="icons" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </aside>
+    </section>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
