--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,8 +25,8 @@
         </nav>
     </header>
     <section class="hero" title="four people collaborating around table at an office meeting"></section>
-    <main class="content">
-        <article class="search-engine-optimization">
+    <main>
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with colorful SEO doodle coffee mug assorted office supplies on a wooden table"class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
