--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="man typing on laptop that reads 'reputation' while holding a cell phone"class="float-right" />
+            <img src="Develop/assets/images/online-reputation-management.jpg" alt="man typing on laptop that reads 'reputation' while holding a cell phone"class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -51,21 +51,21 @@
     <section class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="funnel icon" class="icons"/>
+            <img src="Develop/assets/images/lead-generation.png" alt="funnel icon" class="icons"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
         <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="lit up lightbulb icon" class="icons"/>
+            <img src="Develop/assets/images/brand-awareness.png" alt="lit up lightbulb icon" class="icons"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
         <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="gears with money signs icon" class="icons" />
+            <img src="Develop/assets/images/cost-management.png" alt="gears with money signs icon" class="icons" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
